tests/typechecker/should_fail/lazy_compile1.csp
transparent lazy_compile

P = lazy_compile
